syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/rpc/status.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.area";
option java_multiple_files = true;

service AreaService {
  rpc getAreasStatSplitByEmailAndTelephone(google.protobuf.Empty) returns (stream AreaStatResponse);
  rpc getAreasStatBySplitValue(AreaStatRequest) returns (stream AreaStatResponse);
}

message AreaStatResponse {
  oneof message{
    AreaStats stats = 1;
    google.rpc.Status error = 2;
  }
}

message AreaStats {
  repeated AreaStat stats = 1;
}

message AreaStat {
  string splitValue = 1;
  double max = 2;
  double average = 3;
  double min = 4;
}

message AreaStatRequest {
  double splitValue = 1;
}
